<resources>
    <string name="app_name">Game Elements</string>
    <string name="title_activity_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_copyToClipboard">Copy to clipboard</string>
    <string name="action_clearCards">Clear</string>
    <string name="action_clearLocks">Clear locks</string>
    <string name="action_sortCards">Sort</string>
    <string name="action_createCopy">Create copy</string>
    <string name="action_replace">Replace</string>
    <string name="action_add">Add %d</string>
    <string name="action_change">Change</string>
    <string name="action_remove">Remove</string>
    <string name="action_breakMergeLeft">Break merge, keep left</string>
    <string name="action_breakMergeRight">Break merge, keep right</string>
    <string name="action_disableMergeSlot">Disable merge slot</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_moveToTop">Move to top</string>
    <string name="action_moveUp">Move up</string>
    <string name="action_moveDown">Move down</string>
    <string name="action_copyFundamental">Copy Fundamental: %s</string>
    <string name="action_pasteFundamental">Paste Fundamental: %s</string>
    <string name="action_copyFundamental_disabled">Copy Fundamental</string>
    <string name="action_pasteFundamental_disabled">Paste Fundamental</string>
    <string name="action_randomFundamental">Random Fundamental</string>
    <string name="action_changeFundamentals">Randomize Fundamentals</string>
    <string name="action_mergeSlot">Enable merge slot</string>
    <string name="action_keepElementCategories">Keep element categories</string>
    <string name="action_autoUpdateSettingChanges">Auto-apply cat. and elem. count</string>
    <string name="action_autoSortWhenLocking">Auto-sort when locking</string>
    <string name="action_addFundamentals">Add Fundamentals</string>
    <string name="action_showCategories">Show category tags</string>
    <string name="cardSlotCategory">[%s]</string>
    <string name="cardSlotMergeCategory">[%s+%s]</string>
    <string name="cardSlotMerge">%s %s</string>
    <string name="cardSlotMergeAlt">%s %s %s</string>
    <string name="cardSlotFundamental">(%s)</string>
    <string name="allCatAndCardCount">All Categories - %s Elements</string>
    <string name="allCatAndPageNum">All Categories - Page %s/%s</string>
    <string name="catAndCardCount">Category: %s - %s Elements</string>
    <string name="catAndPageNum">Category: %s - Page %s/%s</string>
    <string name="fundamentalPageNum">Fundamentals - Page %s/%s</string>
    <string name="action_cardCount">Element count: %d</string>
    <string name="action_useCategory">> [%s] %s</string>
    <string name="action_useAllCategories">Use all categories</string>
    <string name="mode_classic">Classic</string>
    <string name="mode_list">List</string>
    <string name="mode_merge">Merge</string>
    <string name="mode_fundamentals">Fundamentals</string>
    <string name="generate">Generate</string>
    <string name="modes">Modes</string>
    <string name="mode">Mode</string>
    <string name="tip">Tip</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="thing">thing</string>
    <string name="things">things</string>
    <string name="listUnavailable_clearLocks">Clear locks to see list</string>
    <string name="mergeSlotTip_full">Swipe elements left and right to merge them</string>
    <string name="mergeSlotTip_left">Swipe elements /</string>
    <string name="mergeSlotTip_right">/ swipe elements</string>
    <string name="mergeSelected_leftSide">Merge left side: \"%s\"</string>
    <string name="mergeSelected_rightSide">Merge right side: \"%s\"</string>
    <string name="copiedToClipboard">Elements copied to clipboard</string>
    <string name="notCopiedToClipboard">No elements to copy to clipboard!</string>
    <string name="help_text">
        "\nGame Elements was designed and developed by Lauri Kosonen."
        "\n\nPlease let me know your opinion of the app by leaving a review on Google Play!"

        "\n\n\nELEMENT COUNTS"

        "\n\n- Total: %s elements"
        "\n- [Wld] World: %s elements"
        "\n- [Cha] Character: %s elements"
        "\n- [Grp] Group: %s elements"
        "\n- [Inf] Influence: %s elements"
        "\n- [Iac] Interaction: %s elements"
        "\n- [Abi] Abilities: %s elements"
        "\n- [Nav] Navigation: %s elements"
        "\n- [Com] Combat: %s elements"
        "\n- [Thi] Thinking: %s elements"
        "\n- [Itm] Items: %s elements"
        "\n- [Go] Goal: %s elements"
        "\n- [AV] Audio &amp; Visuals: %s elements"
        "\n- [Msc] Miscellaneous: %s elements"
        "\n\n- [Fnd] Fundamentals: %s"

        "\n\n\nFEATURES"
        "\n\n- Modes: Classic, List, Merge, Fundamentals"
        "\n- Tap to lock an element. Works in all modes. Locked results will stay on screen."
        "\n- Tap again to change lock color. This can be used to separate results into two locked"
        "and one unlocked group."
        "\n- Tap a third time to remove lock"
        "\n- Tap empty space to add an element"
        "\n- Hold to remove an element"
        "\n- Press the big blue button to replace all unlocked results and fill empty spaces"
        "\n- In the two Merge modes, swipe left to copy that result's beginning to all results"
        "\n- Similarly, swipe right to copy that result's end to all results"
        "\n- In the drop-down menu, you'll find mode selection, clearing all elements,"
        "clearing locks, category selection, and more"
        "\n- Element count can be changed to suit your needs"
        "\n- Merge Slot can be used to merge elements anywhere"
        "\n- You can save your work by pressing the Copy to Clipboard button and pasting to"
        "your device's memo app"

        <i>"\n\n\n[Exit the help screen with your device's back button.]"</i>
    </string>
</resources>
