<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.laurikosonen.gameelements.MainActivity">
    <item
        android:id="@+id/action_createCopy"
        android:title="@string/action_createCopy"
        android:titleCondensed="@string/action_createCopy"
        android:enabled="true"
        android:visible="false" />
    <item
        android:id="@+id/action_disableMergeSlot"
        android:title="@string/action_disableMergeSlot"
        android:titleCondensed="@string/action_disableMergeSlot"
        android:enabled="true"
        android:visible="false" />
    <item
        android:id="@+id/action_lockOrUnlock"
        android:title="@string/action_lock"
        android:titleCondensed="@string/action_lock"
        android:enabled="true"
        android:visible="true" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove"
        android:titleCondensed="@string/action_remove"
        android:enabled="true"
        android:visible="true" />
    <item
        android:id="@+id/action_breakMergeLeft"
        android:title="@string/action_breakMergeLeft"
        android:titleCondensed="@string/action_breakMergeLeft"
        android:enabled="true"
        android:visible="true" />
    <item
        android:id="@+id/action_breakMergeRight"
        android:title="@string/action_breakMergeRight"
        android:titleCondensed="@string/action_breakMergeRight"
        android:enabled="true"
        android:visible="true" />

    <group android:id="@+id/group_fundamentalManagement" >
        <item
            android:id="@+id/action_randomFundamental"
            android:title="@string/action_randomFundamental"
            android:titleCondensed="@string/action_randomFundamental"
            android:enabled="true"
            android:visible="true" />
        <item
            android:id="@+id/action_copyFundamental1"
            android:title="@string/action_copyFundamental"
            android:titleCondensed="@string/action_copyFundamental"
            android:enabled="true"
            android:visible="true" />
        <item
            android:id="@+id/action_copyFundamental2"
            android:title="@string/action_copyFundamental"
            android:titleCondensed="@string/action_copyFundamental"
            android:enabled="true"
            android:visible="false" />
        <item
            android:id="@+id/action_pasteFundamental"
            android:title="@string/action_pasteFundamental"
            android:titleCondensed="@string/action_pasteFundamental"
            android:enabled="true"
            android:visible="true" />
    </group>

    <group android:id="@+id/group_moveElement">
        <item
            android:id="@+id/action_moveToTop"
            android:title="@string/action_moveToTop"
            android:titleCondensed="@string/action_moveToTop"
            android:enabled="true"
            android:visible="true" />
        <item
            android:id="@+id/action_moveUp"
            android:title="@string/action_moveUp"
            android:titleCondensed="@string/action_moveUp"
            android:enabled="true"
            android:visible="true" />
        <item
            android:id="@+id/action_moveDown"
            android:title="@string/action_moveDown"
            android:titleCondensed="@string/action_moveDown"
            android:enabled="true"
            android:visible="true" />
    </group>
</menu>